crates/next-custom-transforms/tests/errors/react-server-components/server-graph/metadata-conflict/output.js
export const metadata = {};
export function generateMetadata() {}
export default function() {
    return null;
}
